pxc/tests/test_113_expandrec/fcall.px
namespace fcall;
import common -;
import meta m;

function {targs} void foo()
{
  expand (sym, id : targs) {
    {
      println(m::to_string{sym});
    }
  }
}

{
  expand foo{m::list{"a", "b", "c"}}; // error: foo is not for expand
}

